# rust-play-actix-mongodb-helm

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.md  manual_test.http
_helm/app/: Chart.yaml  values.yaml
_helm/app/templates/test/: deployment.yaml  service.yaml
_helm/infra/: Chart.yaml  values.yaml
_helm/infra/templates/infra-be-db-mongodb/: mongodb-nodeport-svc.yaml
src/: main.rs
src/controllers/: db_controller.rs  mod.rs
src/repositories/: mod.rs
