[package]
name = "actix_mongodb"
version = "0.1.0"
edition = "2021"
[[bin]]
name = "app"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = "1.0.138"
serde_json = "1.0.82"
bson = { version = "2", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
chrono = "0.4" # Used for setting DateTimes
dotenv = "0.15.0"
futures = "0.3"
tokio = "1"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["async-std-runtime"] 
